Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Peter McCluskey (Mar 30 2001)
  - Reorganized hmrc.html.
  - Add options to split archive into subdirectories:
    folder_by_date
    msgsperfolder
    latest_folder
    describe_folder
    avoid_top_indices

Peter McCluskey (Mar 22 2001)
  - Enabled attachments index file, added sublists of attachment
   names and file sizes.

Peter McCluskey (Mar 22 2001)
  - Fixed problem with GDBM defines.
  - Improved speed by replacing O(N^2) code in these functions with
   code that is at least typically close to O(N):
      addreply, crossindexthread1, crossindexthread2, nextinthread,
      writearticles (if set_showreplies)
   Accidentally improved threading under linkquotes option in the process.
   Overall performance probably scales up linearly with the number of
   messages under normal conditions (but not with linkquotes, which has other
   performance problems as well). Code is ifdef'd under FASTREPLYCODE for now.

Peter McCluskey (Mar 19 2001)
  - Added new usegdbm and append options from Scott Rose.

Peter McCluskey (Mar 14 2001)
  - Added avoid_indices option.

Peter McCluskey (Mar 13 2001)
  - Sped up by balancing the datelist tree a bit (it had been virtually
    a linked list) and by removing redundant call to nextinthread.

Peter McCluskey (Mar 12 2001)
  - Added contrib/cron_hypermail
  - Added some files in contrib and tests/mboxes to FILES.

 Peter McCluskey (Mar 2 2001)
  Added features originally implemented in critmail. New source files:
     finelink.c
     finelink.h
     quotes.c
     search.c
     search.h
     txt2html.c
     txt2html.h
  New options:
    - showhtml: new option value 2 gives richer conversion to html borrowed
       from txt2html.pl.
    - monthly_index: create additional index files broken up by month.
    - yearly_index: create additional index files broken up by year.
    - thread_file_depth: break the threads index file into multiple files,